<resources>
    <string name="app_name">Order Tracking</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">submit</string>
    <string name="error_while_logging_in">error_while_logging_in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch user</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="testbtn">testbtn</string>
</resources>