<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bwback"
    tools:context=".Login">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:textSize="38dp"
        android:visibility="gone"
            android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:hint="@string/enter_email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:background="#00000000"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_marginBottom="10dp"
        android:text="@string/error_while_logging_in"
        android:textColor="#F44336"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit">

    </Button>

    <TextView
        android:id="@+id/registerNow"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/click_here_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/testbtn">

    </Button>

    <TextView
        android:id="@+id/stats"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="login status shows here"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/logStatus"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="status"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/t_message"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="message"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>