<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Registration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/registration"
        android:textSize="38dp"
        android:visibility="gone"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:hint="@string/enter_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:hint="@string/enter_email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_marginBottom="10dp"
        android:text="@string/error_while_logging_in"
        android:textColor="#F44336"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>

    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>
    <TextView
        android:id="@+id/loginNow"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="Click here to login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>