<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <include
        android:id="@+id/include"
        layout="@layout/profiletoolbar"></include>


    <TextView
        android:id="@+id/name"
        android:layout_width="326dp"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/email"
        android:layout_width="324dp"
        android:layout_height="27dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/logout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrder"
        app:layout_constraintVertical_bias="0.0">

    </Button>

    <TextView
        android:id="@+id/fetchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrder"
        app:layout_constraintVertical_bias="0.185"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/viewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="View Orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

    </Button>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="135dp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/profileicon" />


</androidx.constraintlayout.widget.ConstraintLayout>